--- a/index.html
+++ b/index.html
@@ -1815,7 +1815,7 @@
    </strong></p> 
    <p>El pasado Lunes 8 de Mayo se conmemoró la creación del
     conocido teorema de Bolzano presentado al público en el año de 1817,exactamente hace un año.
-    El matemático Bernhard Bolzano tenía guardado el proyecto de la prueba analitica pura o mejor conocido como el Teorema de Bolzano ya que muchos de los compañeros del matemático querían robar la idea del proyecto.
+    El matemático Bernhard cdddBolzano tenía guardado el proyecto de la prueba analitica pura o mejor conocido como el Teorema de Bolzano ya que muchos de los compañeros del matemático querían robar la idea del proyecto.
    </p>
   
 
