--- a/index.html
+++ b/index.html
@@ -492,7 +492,8 @@
         
 <div class="contenedor">
             <div class="texto1 ">
-              h3>Pensamientos Disfuncionales ocasionados por las enfermedades en el siglo XIX </h3>
+
+              <h3>Pensamientos Disfuncionales ocasionados por las enfermedades en el siglo XIX </h3>
      
               <p>En un estudio innovador sobre la historia de la salud, los investigadores han descubierto una relación intrigante entre las enfermedades del siglo XIX y los pensamientos disfuncionales que predominaban en esa época. Esta conexión revela cómo los factores psicológicos pueden haber contribuido significativamente a la propagación y el impacto de las enfermedades en ese período.
                 Durante el siglo XIX, las enfermedades infecciosas como la tuberculosis, la fiebre tifoidea y la viruela azotaron a la sociedad, llevando a una alta tasa de mortalidad y causando estragos en la salud pública. Sin embargo, los científicos y los profesionales de la salud de la época no tenían una comprensión completa de la naturaleza de estas enfermedades y sus mecanismos de transmisión.
